// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "wfa/measurement/internal/kingdom/participant_requisition_params.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

message ComputationParticipantDetails {
  oneof protocol {
    LiquidLegionsV2Params liquid_legions_v2 = 1;

    LiquidLegionsV2Params reach_only_liquid_legions_v2 = 2;

    HonestMajorityShareShuffleParams honest_majority_share_shuffle = 3;
  }
}
